Use Java 18 on Heroku Fix Java modules problem